--- a/templates/documents.html
+++ b/templates/documents.html
@@ -15,8 +15,8 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Nombre</th>
-                <th scope="col">Url</th>
+                <th scope="col">Path</th>
+                <th scope="col">Descarga</th>
             </tr>
         </thead>
     
@@ -26,9 +26,10 @@
             <tr>
                 <td>{{ document }}</td>
                 <td>
-                <object data="myfile.pdf" type="application" width="100%" height="100%">
-                  <a href= "{% static "corpus/alt.atheism/" %}{{document}}" >DOC!</a>
-                </object>
+                <!-- <object data="myfile.pdf" type="application" width="100%" height="100%">
+                  <a href= {{document}} >DOC!</a>
+                </object> -->
+                <p>Muy pronto</p>
               </td>
             </tr>
             
