Boolean_model_done

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
               <select data-trigger="" name="choices-single-defaul">
                 <option placeholder="">Model</option>
                 <option>Vectorial</option>
+                <option>Boolean</option>
               </select>
             </div>
           </div>
