--- a/templates/documents.html
+++ b/templates/documents.html
@@ -5,14 +5,16 @@
   	<title>Onfet</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-   
-		
 		<link rel="stylesheet" href="{% static 'boostrap/css/bootstrap.min.css' %}">
 		<link rel="stylesheet" href="{% static 'boostrap/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/jquery.dataTables.min.css' %}">
+    <script src="{% static 'js/jquery-3.5.1.js' %}"></script>
+    <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+    </head>
+      <br>
   </head>
   <body>
-    <table class="table">
+    <table  id="documents" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
                 <th scope="col">Path</th>
@@ -44,23 +46,29 @@
         </table>
     
     </table>
-    <!-- <div class="pagination">
-          
-        <span class="step-links">
-            {% if document_list.has_previous %}
-                <a href="?page=1">&laquo; inicio</a>
-                <a href="?page={{ document_list.previous_page_number }}">anterior</a>
-            {% endif %}
-            <span class="current">
-                Page {{ document_list.number }} of {{ document_list.paginator.num_pages }}.
-            </span>
-            {% if document_list.has_next %}
-                <a href="?page={{ document_list.next_page_number }}">siguiente</a>
-                <a href="?page={{ document_list.paginator.num_pages }}">final &raquo;</a>
-            {% endif %}
-        </span>
-    </div> -->
-    </html>
+   
+    <script type="text/javascript">
+      $(document).ready(function () {
+          $.noConflict();
+          $('#documents').DataTable({
+            "language": {
+              "lengthMenu": "Mostrar _MENU_ registros por página",
+              "zeroRecords": "No se encontraron registros",
+              "info": "Mostrando página _PAGE_ de _PAGES_",
+              "infoEmpty": "No hay registros disponibles",
+              "infoFiltered": "(filtrado de _MAX_ registros totales)",
+              "search": "Buscar:",
+              "paginate": {
+                "first":      "Primero",
+                "last":       "Último",
+                "next":       "Siguiente",
+                "previous":   "Anterior"
+              },
+            }
+          });
+          });
+    </script>
+    
     <script src="{% static 'boostrap/js/jquery.min.js' %}"></script>
     <script src="{% static 'boostrap/js/popper.js' %}"></script>
     <script src="{% static 'boostrap/js/bootstrap.min.js' %}"></script>
