--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
                 <option placeholder="">Model</option>
                 <option>Vectorial</option>
                 <option>Boolean</option>
+                <option>Extended Boolean</option>
               </select>
             </div>
           </div>
