--- a/templates/documents.html
+++ b/templates/documents.html
@@ -18,6 +18,7 @@
         <thead>
             <tr>
                 <th scope="col">Path</th>
+                <th scope="col">Score</th>
                 <th scope="col">Descarga</th>
             </tr>
         </thead>
@@ -26,7 +27,8 @@
             {% if document_list %}
             {% for document in document_list %}
             <tr>
-                <td>{{ document }}</td>
+                <td>{{ document.0 }}</td>
+                <td>{{ document.1 }}</td>
                 <td>
                 <!-- <object data="myfile.pdf" type="application" width="100%" height="100%">
                   <a href= {{document}} >DOC!</a>
