--- a/templates/documents.html
+++ b/templates/documents.html
@@ -30,10 +30,7 @@
                 <td>{{ document.0 }}</td>
                 <td>{{ document.1 }}</td>
                 <td>
-                <!-- <object data="myfile.pdf" type="application" width="100%" height="100%">
-                  <a href= {{document}} >DOC!</a>
-                </object> -->
-                <p>Muy pronto</p>
+                  <a href= {{document.0}} download >Doc!</a>
               </td>
             </tr>
             
