--- a/templates/documents.html
+++ b/templates/documents.html
@@ -19,7 +19,7 @@
             <tr>
                 <th scope="col">Path</th>
                 <th scope="col">Score</th>
-                <th scope="col">Descarga</th>
+                <th scope="col">View</th>
             </tr>
         </thead>
     
@@ -30,7 +30,7 @@
                 <td>{{ document.0 }}</td>
                 <td>{{ document.1 }}</td>
                 <td>
-                  <a href= {{document.0}} download >Doc!</a>
+                  Coming soon
               </td>
             </tr>
             
